--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,6 +21,7 @@ body{
     padding-right: 3rem;
     padding-top: -8rem;
     font-family: "Montserrat", sans-serif;
+    position: inherit;
 }
 .nav-name{
     color: #FF7043;
@@ -55,9 +56,9 @@ body{
 }
 .homegif{
     /* justify-content: flex-end; */
-    display: center;
+    display: block;
     margin-left: auto;
-    margin-right: auto;
+    /* margin-right: auto; */
 }
 
 .signup-container{
@@ -97,4 +98,45 @@ body{
 }
 .signup-p{
     font-size: 20px;
+    margin-top: 0.02px;
+    margin-bottom: 50px;
+}
+.input{
+    border: none;
+    border-color: rgb(127,182,133, 0.3);
+    width: 23rem;
+    height: 2.5rem;
+    border-radius: 10px;
+    font-size: 20px;
+    display: center;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: 	rgb(127,182,133, 0.3);
+    /* margin-bottom: 1.5rem; */
+    /* padding-left: 1rem; */
+    font-family: "Montserrat", sans-serif;
+    padding-left: 20px;
+}
+
+.signup-label{
+    font-size: 16px;
+    font-weight: 600;
+
+}
+.signup-submit{
+    background-color: #7FB685;
+    border: none;
+    display: center;
+    justify-items: right;
+    width: 385px;
+    height: 2.5rem;
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    text-decoration: none;
+    
 }
