--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,31 +16,27 @@ body{
     height: 100%;
 }
 .App{
-    margin-left: 3rem;
-    margin-right: 3rem;
-    /* margin-top: 2.5rem; */
+    margin-left: 2rem;
+    margin-right: 2rem;
     display: flex;
     flex-direction: column;
-    /* margin-top: none !important; */
 }
 
 .navbar {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
-    /* padding-left: 1.3rem;  */
-    /* padding-right: 3rem; */
-    /* padding-top: -8rem !important; */
+    padding-left: 1.3rem; 
+    padding-right: 3rem;
+    padding-top: -8rem;
     font-family: "Montserrat", sans-serif;
     position: inherit;
-    margin-top: 1.5rem;
 }
 .nav-name{
     color: #FF7043;
     font-family: "Quicksand", sans-serif;
     font-size: 3.5rem;
     font-weight: 600;
-    margin-top: 0;
 }
 .navbar > ul { 
     display: flex;
@@ -64,7 +60,7 @@ body{
 }
 
 .signup-button{
-    /* padding-right: 1.5rem; */
+    padding-right: 1.5rem;
 }
 
 .navtext{
@@ -90,7 +86,7 @@ body{
     display: center;
     margin-left: auto;
     margin-right: auto;
-    /* margin-top: 1.5rem; */
+    margin-top: 1.5rem;
     display:flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -110,7 +106,7 @@ body{
     display: center;
     margin-left: auto;
     margin-right: auto;
-    /* margin-top: 1.5rem; */
+    margin-top: 1.5rem;
     display:flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -149,11 +145,10 @@ body{
     font-size: 20px;
     display: center;
     margin-left: auto;
-    /* margin-right: auto; */
+    margin-right: auto;
     background-color: 	rgb(127,182,133, 0.3);
     font-family: "Montserrat", sans-serif;
     padding-left: 20px;
-    padding-right: -30px;
     font-weight: 400;
 }
 
@@ -161,18 +156,16 @@ body{
     font-size: 16px;
     font-weight: 600;
     margin-top: 1.5rem;
-
+    padding-bottom: none;
 }
-.yummagesubmit{
+.yummage-submit{
     background-color: #7FB685 !important;
-    width: 385px !important;
-    height: 50px !important;
+    width: 385px;
+    height: 50px;
     color: white !important;
     font-size: 20px !important;
     font-weight: 700 !important;
     text-decoration: none;
-    border: none;
-    border-radius: 10px;
 }
 
 .user-icon{
@@ -208,7 +201,6 @@ body{
     justify-content: center;
     font-weight: 600;
     font-family: "Merriweather", serif;
-    margin: 0%;
 }
 .home-h3{
     font-size: 40px;
@@ -223,13 +215,12 @@ body{
     border-radius: 10px;
     font-weight: bold;
     font-size: 35px;
-    text-decoration: none;
 }
 .hero-content{
     z-index: 0;
     display: flex;
     align-items: flex-start !important;
-    /* max-width: 80rem; */
+    max-width: 80rem;
     gap: 1rem;
     padding: 1rem;
     flex-direction: column;
