--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -201,6 +201,7 @@ body{
     margin-left: 4rem;
     margin-right: 4rem;
     gap: 3rem;
+    margin-top: 3rem;
 }
 .home-header{
     font-size: 66px;
